--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="172"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FoO-fB-5L6" id="PUQ-El-gbK">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="171.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="172"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o0a-co-xkU">
@@ -40,46 +40,45 @@
                                                         <constraint firstAttribute="width" constant="123" id="wpm-rf-WU9"/>
                                                     </constraints>
                                                 </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S48-GP-wW2">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S48-GP-wW2">
                                                     <rect key="frame" x="139" y="45" width="83" height="15"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="15" id="XXk-Cs-b6q"/>
+                                                        <constraint firstAttribute="width" constant="83" id="ib5-46-DlJ"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="1.Grand puBooo" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VsN-3a-Paf">
-                                                    <rect key="frame" x="139" y="8" width="123" height="19.5"/>
+                                                    <rect key="frame" x="139" y="8" width="123" height="20"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="469 reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uSF-00-rZ9">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="469 reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uSF-00-rZ9">
                                                     <rect key="frame" x="230" y="45" width="75" height="16"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.38106757614213194" green="0.38106757614213194" blue="0.38106757614213194" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="18 FDiivison sst, Mison bay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9v-XT-WWk">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18 FDiivison sst, Mison bay" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9v-XT-WWk">
                                                     <rect key="frame" x="139" y="69" width="164" height="16"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Thai, Seafood salad." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mx8-6x-xsm">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thai, Seafood salad." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mx8-6x-xsm">
                                                     <rect key="frame" x="139" y="94" width="123" height="16"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.38106757614213194" green="0.38106757614213194" blue="0.38106757614213194" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNY-sZ-yDn">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNY-sZ-yDn">
                                                     <rect key="frame" x="335" y="45" width="17" height="16"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.38106757614213194" green="0.38106757614213194" blue="0.38106757614213194" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="0.07mi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X0t-er-pUj">
-                                                    <rect key="frame" x="317" y="9.5" width="41" height="16"/>
+                                                    <rect key="frame" x="317" y="10" width="41" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.38106757614213194" green="0.38106757614213194" blue="0.38106757614213194" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -87,13 +86,25 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="X0t-er-pUj" secondAttribute="trailing" constant="9" id="2Nu-Jk-Ep6"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="mNY-sZ-yDn" secondAttribute="trailing" constant="15" id="5SI-DB-8B9"/>
+                                                <constraint firstItem="Mx8-6x-xsm" firstAttribute="leading" secondItem="v9v-XT-WWk" secondAttribute="leading" id="5SI-id-KO8"/>
+                                                <constraint firstItem="v9v-XT-WWk" firstAttribute="top" secondItem="S48-GP-wW2" secondAttribute="bottom" constant="9" id="DKT-mp-8Ng"/>
                                                 <constraint firstItem="o0a-co-xkU" firstAttribute="leading" secondItem="PUQ-El-gbK" secondAttribute="leading" constant="8" id="FAX-wr-YDw"/>
-                                                <constraint firstItem="X0t-er-pUj" firstAttribute="baseline" secondItem="VsN-3a-Paf" secondAttribute="baseline" constant="-1" id="IT2-Ru-9eR"/>
+                                                <constraint firstItem="Mx8-6x-xsm" firstAttribute="top" secondItem="v9v-XT-WWk" secondAttribute="bottom" constant="9" id="J8U-U9-O9L"/>
                                                 <constraint firstItem="VsN-3a-Paf" firstAttribute="leading" secondItem="o0a-co-xkU" secondAttribute="trailing" constant="8" id="JV7-gy-HBz"/>
+                                                <constraint firstItem="mNY-sZ-yDn" firstAttribute="top" secondItem="X0t-er-pUj" secondAttribute="bottom" constant="19.5" id="Ncm-jH-A4B"/>
+                                                <constraint firstItem="v9v-XT-WWk" firstAttribute="leading" secondItem="o0a-co-xkU" secondAttribute="trailing" constant="8" id="ONx-Zl-gZK"/>
+                                                <constraint firstItem="S48-GP-wW2" firstAttribute="leading" secondItem="o0a-co-xkU" secondAttribute="trailing" constant="8" id="ScL-tf-lbL"/>
                                                 <constraint firstItem="o0a-co-xkU" firstAttribute="top" secondItem="PUQ-El-gbK" secondAttribute="top" constant="8" id="WbR-jn-iny"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="o0a-co-xkU" secondAttribute="bottom" constant="12" id="dnI-Cd-J5V"/>
                                                 <constraint firstItem="X0t-er-pUj" firstAttribute="leading" secondItem="VsN-3a-Paf" secondAttribute="trailing" constant="55" id="eHN-6r-Go7"/>
                                                 <constraint firstItem="VsN-3a-Paf" firstAttribute="top" secondItem="PUQ-El-gbK" secondAttribute="top" constant="8" id="gmX-2O-ZfC"/>
+                                                <constraint firstItem="Mx8-6x-xsm" firstAttribute="leading" secondItem="v9v-XT-WWk" secondAttribute="leading" id="jWD-1i-SIi"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Mx8-6x-xsm" secondAttribute="bottom" constant="12" id="kL2-DC-G3A"/>
+                                                <constraint firstItem="uSF-00-rZ9" firstAttribute="centerY" secondItem="S48-GP-wW2" secondAttribute="centerY" id="oXA-9j-e2V"/>
+                                                <constraint firstItem="uSF-00-rZ9" firstAttribute="leading" secondItem="S48-GP-wW2" secondAttribute="trailing" constant="8" id="p2k-Iv-Q0B"/>
+                                                <constraint firstItem="S48-GP-wW2" firstAttribute="top" secondItem="VsN-3a-Paf" secondAttribute="bottom" constant="17.5" id="tbz-M1-XyH"/>
+                                                <constraint firstItem="X0t-er-pUj" firstAttribute="top" secondItem="PUQ-El-gbK" secondAttribute="topMargin" constant="1.5" id="vvm-3V-oV3"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
